BB-1323 - composer update + client regenerated
