# src/Generated/Exception/DeleteAuthRoleIdentityCollectionBadRequestException.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace Datenkraft\Backbone\Client\FreshdeskSkuUsageCollectorApi\Generated\Exception;
+
+class DeleteAuthRoleIdentityCollectionBadRequestException extends BadRequestException
+{
+    private $errorResponse;
+    public function __construct(\Datenkraft\Backbone\Client\FreshdeskSkuUsageCollectorApi\Generated\Model\ErrorResponse $errorResponse)
+    {
+        parent::__construct('Bad Request', 400);
+        $this->errorResponse = $errorResponse;
+    }
+    public function getErrorResponse()
+    {
+        return $this->errorResponse;
+    }
+}
